Improve code
Improve quality using sonarlint.
Persist the generated api key.
Change apikey from url to header.